DDF-3433 updated definition of DDF_HOME to work with whitespace (#2617) (#2779)
* DDF-3433 updated definition of DDF_HOME to work with whitespace

* DDF-3433 moved security manager properties out of setenv into system.properties